objects/AdvAccountForecastFact.object
<CustomObject>
    <fields>
        <fullName>Actual_Gross_Margin_Percent__c</fullName>
        <formula>IF(OrderQuantity &lt;&gt; 0, OrderRevenue - ( ( OrderQuantity * Variable_Cost_Per_Unit__c  ) +  Fixed_Cost__c  ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Gross Margin Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Profit__c</fullName>
        <formula>IF(OrderQuantity &lt;&gt; 0, OrderRevenue - ( ( OrderQuantity *  Variable_Cost_Per_Unit__c  ) + Fixed_Cost__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Cat__c</fullName>
        <label>CBS-Cat</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBS_Prod__c</fullName>
        <description>used for CBS rules</description>
        <label>CBS-Prod</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_MGR_Adjustment_QTY__c</fullName>
        <label>Category MGR Adjustment QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_MGR_Adjustment_Rev__c</fullName>
        <label>Category MGR Adjustment Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>ProductCategory</referenceTo>
        <relationshipLabel>Advanced Account Forecast Facts</relationshipLabel>
        <relationshipName>Advanced_Account_Forecast_Facts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Cost__c</fullName>
        <label>Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Gross_Margin_Percent__c</fullName>
        <formula>IF(ForecastedQuantity &lt;&gt; 0, ( ForecastedRevenue - ( ForecastedQuantity * Variable_Cost_Per_Unit__c  + Fixed_Cost__c )) / ForecastedRevenue, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Gross Margin Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Profit__c</fullName>
        <formula>ForecastedRevenue - ( ( ForecastedQuantity *  Variable_Cost_Per_Unit__c  ) + Fixed_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_MGR_Adjustment_QTY__c</fullName>
        <label>Global MGR Adjustment QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_MGR_Adjustment_Rev__c</fullName>
        <label>Global MGR Adjustment Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>(ForecastedQuantity *  Variable_Cost_Per_Unit__c  ) + Fixed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Cost_Per_Unit__c</fullName>
        <label>Variable Cost Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order_Actual_Revenue__c</fullName>
        <description>Demo field for Service forecast</description>
        <label>Work Order Actual Revenue</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order_Adjusted_Revenue__c</fullName>
        <description>Demo field for Service forecast</description>
        <label>Work Order Adjusted Revenue</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order_Planned_Revenue__c</fullName>
        <description>Custom field to support demo of Service revenue forecasting</description>
        <label>Work Order Planned Revenue</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order_Revenue_Variance__c</fullName>
        <formula>(Work_Order_Adjusted_Revenue__c - Work_Order_Actual_Revenue__c) / Work_Order_Adjusted_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Revenue Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Advanced Account Forecast Facts</relationshipLabel>
        <relationshipName>Advanced_Account_Forecast_Facts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Name</columns>
        <columns>AdvAcctForecastSetPartner</columns>
        <columns>Period</columns>
        <columns>Status</columns>
        <columns>Category__c</columns>
        <columns>Product</columns>
        <columns>Global_MGR_Adjustment_QTY__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name</field>
            <operation>equals</operation>
            <value>Compactor 9000 October FY 2022</value>
        </filters>
        <label>All</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>